bugfix console overflow

--- a/public/sass/screen.scss
+++ b/public/sass/screen.scss
@@ -35,6 +35,7 @@ h1 {
 				color: $consoleColor;
 				background: $consoleBkg;
 				padding: 4px 6px;
+				overflow: scroll;
 
         .username {
             color: red;
